--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     },
     "dependencies": {
         "@solidjs/router": "^0.13.2",
-        "@solidjs/start": "^1.0.0-rc.0",
+        "@solidjs/start": "1.0.0-rc.0",
         "autoprefixer": "^10.4.19",
         "postcss": "^8.4.38",
-        "solid-js": "^1.8.16",
+        "solid-js": "^1.8.17",
         "tailwindcss": "^3.4.3",
         "vinxi": "^0.3.11"
     },
