--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "prettier": "^3.2.5",
-        "prettier-plugin-tailwindcss": "^0.5.14"
+        "prettier-plugin-tailwindcss": "^0.5.14",
+        "solid-devtools": "^0.30.1"
     }
 }
