--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-    "name": "example-with-tailwindcss",
+    "name": "vite",
+    "private": true,
+    "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vinxi dev",
-        "build": "vinxi build",
-        "start": "vinxi start",
-        "format": "prettier --write ./src"
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
     },
     "dependencies": {
         "@solidjs/router": "^0.13.2",
-        "@solidjs/start": "1.0.0-rc.0",
-        "autoprefixer": "^10.4.19",
         "clsx": "^2.1.1",
-        "postcss": "^8.4.38",
-        "solid-js": "^1.8.17",
-        "tailwind-merge": "^2.3.0",
-        "tailwindcss": "^3.4.3",
-        "vinxi": "^0.3.11"
-    },
-    "engines": {
-        "node": ">=18"
+        "solid-js": "^1.8.15",
+        "tailwind-merge": "^2.3.0"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.19",
+        "postcss": "^8.4.38",
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.14",
-        "solid-devtools": "^0.30.1"
+        "solid-devtools": "^0.30.1",
+        "tailwindcss": "^3.4.3",
+        "typescript": "^5.2.2",
+        "vite": "^5.2.0",
+        "vite-plugin-solid": "^2.10.2",
+        "vite-tsconfig-paths": "^4.3.2"
     }
 }
