--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,31 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
+        "target": "ES2020",
+        "useDefineForClassFields": true,
         "module": "ESNext",
-        "moduleResolution": "node",
-        "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
+        "lib": ["ES2020", "DOM", "DOM.Iterable"],
+        "skipLibCheck": true,
+
+        /* Bundler mode */
+        "moduleResolution": "bundler",
+        "allowImportingTsExtensions": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
         "jsx": "preserve",
         "jsxImportSource": "solid-js",
-        "allowJs": true,
-        "noEmit": true,
+
+        /* Linting */
         "strict": true,
-        "types": ["vinxi/types/client"],
-        "isolatedModules": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+        /* Path alias */
+        "baseUrl": ".",
         "paths": {
-            "~/*": ["./src/*"]
+            "~/*": ["src/*"]
         }
-    }
+    },
+    "include": ["src"],
+    "references": [{ "path": "./tsconfig.node.json" }]
 }
