--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "format": "prettier --write ./src"
     },
     "dependencies": {
         "@solidjs/router": "^0.13.2",
