--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@solidjs/router": "^0.13.2",
+        "@vercel/analytics": "^1.5.0",
         "clsx": "^2.1.1",
         "solid-js": "^1.8.15",
         "tailwind-merge": "^2.3.0"
@@ -26,5 +27,10 @@
         "vite": "^5.2.0",
         "vite-plugin-solid": "^2.10.2",
         "vite-tsconfig-paths": "^4.3.2"
+    },
+    "pnpm": {
+        "onlyBuiltDependencies": [
+            "esbuild"
+        ]
     }
 }
